--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ Fundada em 2019, a <strong> Barbearia Alura </strong> á é destaque na cidade e
 
 <p><em><strong> missão é: "Proporcionar auto-estima e qualidade de vida aos clientes". <em></em></strong>
 
-Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
